--- a/index_prova/css/style.css
+++ b/index_prova/css/style.css
@@ -20,7 +20,7 @@ body, html {
 }
 
 .nav_menu li {
-  display: inline-block;
+    display: inline-block;
   padding-top: 10px;
   padding-bottom: 10px;
 }
@@ -184,6 +184,13 @@ body, html {
   display: none;
 }
 
+.signup2{
+  display: none;
+}
+
+.signup1{
+}
+
 img {
   height: 100px;
   width: 100px;
@@ -218,6 +225,29 @@ h3 {
   position: relative;
 }
 
+.inputbox_gender{
+  display: inline-block;
+  margin-bottom: 10px;
+}
+
+.gender1{
+  float: left;
+  margin-right: 10px;
+}
+
+.gender2{
+  float: right;
+  margin-left: 10px;
+}
+
+.fa-mars{
+  color: blue;
+}
+
+.fa-venus{
+  color: pink;
+}
+
 .inputbox span {
   position: absolute;
 }
@@ -234,20 +264,49 @@ h3 {
   cursor: pointer;
 
   -moz-transition: all .2s ease-in;
-    -o-transition: all .2s ease-in;
-    -webkit-transition: all .2s ease-in;
-    transition: all .2s ease-in;
+  -o-transition: all .2s ease-in;
+  -webkit-transition: all .2s ease-in;
+  transition: all .2s ease-in;
 }
 
-.input input[type="submit"]:hover {
+.button3{
+  border: none;
+  outline: none;
+  width: 100% !important; /* WARNING:  */ /* WARNING:  */
+  font-size: 16px;
+  background-color:  #00B6E5;
+  border-radius: 20px;
+  color: #fff;
+  cursor: pointer;
+  text-transform: none !important;
+
+  -moz-transition: all .2s ease-in;
+  -o-transition: all .2s ease-in;
+  -webkit-transition: all .2s ease-in;
+  transition: all .2s ease-in;
+}
+
+
+
+.input input[type="submit"]:hover, .button3:hover {
   background-color: #44DDFF;
 }
 
-.fa-times{
+.fa{
   height: 10px;
   width: 10px;
-  float: right;
   cursor: pointer;
+  margin-top: 0px;
+}
+
+.fa-times{
+  float: right;
+  margin-top: 10px;
+}
+
+.fa-angle-double-left{
+  float: left;
+  display: none;
   margin-top: 10px;
 }
 
