--- a/paziente/css/pazientestyle.css
+++ b/paziente/css/pazientestyle.css
@@ -1,5 +1,5 @@
 body{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/wall_paziente.jpeg);
+    background-image: url("../img/img_1.jpg");
     background-size: cover;
 }
 
@@ -31,7 +31,7 @@ body{
    margin: 0;
    padding: 0;
    background-color: #fff;
-   border-top: solid 10px #00B6E5;
+   border-top: solid 10px #648B79;
    height: 100%;
    width: auto;
    margin-left: 10%;
@@ -76,20 +76,11 @@ html, body, .page{
 	margin-top: 70px;
 	color: white;
 	cursor: pointer;
-	background-color: #00B6E5;
+	background-color: #648B79;
   opacity: 0;
 	z-index: 10000;
 	font-size: 2em;
 	transition: all 0.2s ease-in-out;
-
-  -moz-transition: all .2s ease-in;
-  -o-transition: all .2s ease-in;
-  -webkit-transition: all .2s ease-in;
-  transition: all .2s ease-in;
-}
-
-.toggle-menu:hover{
-  background-color: #44DDFF;
 }
 
 .fa-times{
@@ -200,8 +191,7 @@ html, body, .page{
 
 .home1{
   height: 100%;
-  background-color: #EDF0F1;
-  text-align: center;
+  background-color: rgb(237, 240, 241);
 }
 
 .home2{
@@ -210,77 +200,9 @@ html, body, .page{
 }
 
 .user_name{
-  margin-top: 50px;
-  text-transform: uppercase;
-  font-size: 40px;
-  color: #0000000;
+
 }
 
 .user_image{
-  margin-top: 60px;
-  text-align: center;
-}
 
-.user_buttons{
-  width: 100%;
-  height: 100px;
-  background-color: #00B6E5;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-}
-
-.image_css{
-  border-radius: 50%;
-  height: 210px;
-  width: 210px;
-  border: solid 10px #C5C5C5;
-}
-
-.row{
-  bottom: 0;
-  position: absolute;
-  text-align: center;
-  width: 100%;
-}
-
-.row1{
-  margin-top: 10px;
-  text-align: center;
-  width: 100%;
-}
-
-.line{
-  position: relative;
-  width: 50%;
-  border-top: solid 4px #4C4C4C;
-  border-radius: 5px;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.line1{
-  position: relative;
-  width: 50%;
-  border-top: solid 4px #00B6E5;
-  border-radius: 5px;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.ruolo{
-  margin-top: 30px;
-  font-size: 20px;
-  color: #858585;
-}
-
-.headerhome2{
-  float: right;
-  margin-top: 10px;
-  margin-right: 10px;
-  font-size: 50px;
-}
-
-.fa-user{
-  background-color: #4C4C4C;
-  color: #fff
 }
