--- a/index_prova/css/error.css
+++ b/index_prova/css/error.css
@@ -17,7 +17,7 @@ body, html {
 }
 
 .error_content{
-  border: solid 2px darkorange;
+  border: solid 2px #00B6E5;
   padding-left: 20px;
   padding-right: 20px;
   background-color: #fff;
