--- a/Progetto-master v3/index_prova/css/pazientestyle.css
+++ b/Progetto-master v3/index_prova/css/pazientestyle.css
@@ -274,13 +274,14 @@ html, body, .page{
 }
 
 .headerhome2{
-  float: right;
   margin-top: 10px;
   margin-right: 10px;
-  font-size: 50px;
 }
 
-.fa-user{
-  background-color: #4C4C4C;
-  color: #fff
+.informazioni_paziente, .prossima_visita{
+  margin-top: 50px;
+  width: 100%;
+  height: 250px;
+  border: solid 3px #EDF0F1;
+  box-shadow: 10px 10px 5px #EDF0F1;
 }
