--- a/Progetto-master v3/index_prova/css/pazientestyle.css
+++ b/Progetto-master v3/index_prova/css/pazientestyle.css
@@ -279,9 +279,18 @@ html, body, .page{
 }
 
 .informazioni_paziente, .prossima_visita{
+
   margin-top: 50px;
   width: 100%;
   height: 250px;
-  border: solid 3px #EDF0F1;
-  box-shadow: 10px 10px 5px #EDF0F1;
+  border: solid 1px #EDF0F1;
+  box-shadow: 10px 10px 5px #F3F3F3;
+
+}
+
+.titlehead{
+  font-weight: lighter;
+  font-size: 20px;
+  width: 100%;
+  padding: 10px;
 }
